--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>talos_wbc_wrapper</name>
-  <version>0.0.1</version>
-  <description>The talos wbc package for gui</description>
+  <version>0.1.7</version>
+  <description>The pal_locomotion_tutorials package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="sanghyun.kim@ed.ac.uk">Sanghyun Kim</maintainer>
   <author email="sanghyun.kim@ed.ac.uk">Sanghyun Kim</author>
- 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
